/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "RowEventMessage";

message RowEventDto {
    enum RowEventType {
        ADD = 0;
        UPDATE = 1;
        REMOVE = 2;
    }
    required RowEventType eventType = 1;
    optional uint32 rowId = 2;

    message ColumnValue {
        required uint32 columnId = 1;
        oneof value {
        double doubleValue = 2;
        float floatValue = 3;
        sint32 intValue = 4;
        sint64 longValue = 5;
        bool booleanValue = 6;
        string stringValue = 7;
        bytes blobValue = 8;
        sint32 nullValue = 9;
        }
    }

    repeated ColumnValue values = 3;
    optional string tableKey = 4;
}
